# meson_cmake_module_bug_example

./: README.md  meson.build
subprojects/example_subproject/: CMakeLists.txt  main.c  main.h
